style.css
/* ... */
@media (width <= 767px) {
  .button {
    min-width: 100.34px;
    padding: 12px 12px;
    background-color: var(--accent-color);
  }
  .button.dark {
    background-color: var(--accent-color-dk);
  }
  .container {
    width: min(100% - 16px);
  }
  .header {
    background-color: var(--bg-light1);
    height: 8vh;
  }
  .header.dark {
    background-color: var(--bg-night2);
  }
  .navbar > .container {
    width: min(100% - 16px) !important;
  }
  .ul-shadow {
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    right: 0;
    z-index: 299;
    background: rgba(0, 0, 0, 0.4);
    opacity: 0;
    transition: opacity 0.3s linear;
    user-select: none;
    pointer-events: none;
  }
  .ul-shadow.open-nav {
    opacity: 1;
    user-select: all;
    pointer-events: all;
  }
  .de-navbar-1 {
    content: "";
    width: 40vw;
    max-width: 400px;
    height: 40vw;
    max-height: 400px;
    border-radius: 50%;
    background: linear-gradient(25deg, #ebf2fd, #8e8ffa, #7752fe, #190482);
    position: absolute;
    top: 100%;
    left: 80%;
    transform: translate(-50%, -50%);
    z-index: -1;
    transition: background 0.4s linear;
    opacity: 0.1;
  }
  .header-ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 32px;
    width: 50vw;
    height: 50vh;
    color: #000;
    background-color: var(--bg-light1);
    position: absolute;
    top: -2px;
    right: 0;
    padding-left: 3rem;
    opacity: 0;
    scale: 0.3;
    transition: opacity 0.3s linear, scale 0.3s linear,
      background-color 0.3s linear, gap 0.3s linear;
    user-select: none;
    pointer-events: none;
    /* visibility: hidden; */
    transform-origin: top right;
    z-index: 300;
    overflow: hidden;
  }
  .header-ul.dark {
    background-color: var(--bg-night1);
  }
  .header-li {
    width: fit-content;
  }
  .tooltip-text {
    display: none;
  }
  .dark-mode-text {
    display: inline-block;
    margin-right: 1rem;
    font-weight: 700;
  }
  .navbuttons {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .header-ul.open-nav {
    gap: 32px;
    width: 50vw;
    height: 50vh;
    color: #000;
    background-color: var(--bg-light1);
    opacity: 1;
    scale: 1;
    pointer-events: all;
    visibility: visible;
    z-index: 300;
  }
  .header-ul.open-nav.dark {
    background-color: var(--bg-night1);
    color: #fff;
  }
  .de-hero-4 {
    width: 110px;
    height: 110px;
  }
  .de-hero-4::before {
    border: 20px solid #7173e6;
  }
  .container2-responsive {
    display: flex;
    flex-direction: column !important;
    align-items: center !important;
    gap: 4rem;
  }
  .block-wrapper-2,
  .block-wrapper-3 {
    display: flex;
    flex-direction: column;
    width: 100%;
  }
  .author-photo {
    width: 98%;
    max-width: 457.14px;
    /* min-width: 390px; */
    align-self: center;
  }
  .container-services {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    margin-top: 80px;
  }
  .services-headline-wrapper {
    width: 100%;
  }
  .services-dropdown-wrapper {
    width: 100%;
  }
  .services-title.opened {
    padding-left: 0;
  }
  .services-dropdown-div:hover > .services-title {
    padding-left: 0;
  }
  .projects-container {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
  .work-1,
  .work-2,
  .work-3,
  .work-4 {
    grid-column: span 1 / span 1;
  }
  .project-img-wrapper {
    border-radius: 0;
  }
  .container3-responsive {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .disable,
  .disable.dark {
    background-color: #888;
  }
  .block-wrapper-4 {
    width: 98%;
    /* margin-bottom: 2rem; */
    padding: 40px 30px;
  }
  .container4-responsive {
    /* width: 100%; */
    display: flex;
    flex-direction: column !important;
    align-items: center !important;
    gap: 4rem;
  }
  .block-wrapper-6,
  .block-wrapper-7 {
    width: 100%;
  }
  .bw7-info {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: left;
    gap: 2rem;
  }
  .info-div {
    width: 100%;
  }
  .form-div-1 {
    flex-direction: column;
  }
  .container5-responsive {
    flex-direction: column;
    align-items: flex-start !important;
    gap: 2rem;
  }
  .footer-nav-div-wrapper {
    order: -1;
    width: 100%;
    margin-left: 0;
  }
  .footer-nav-div {
    width: 50%;
  }
  .de-footer-1 {
    width: 60px;
    height: 60px;
    top: 56%;
    left: 78%;
  }
  .de-footer-2 {
    width: 40px;
    height: 40px;
    top: 76%;
    left: 40%;
  }
}
@media (width <= 500px) {
  .header-ul {
    width: 75vw;
  }
  .header-ul.open-nav {
    width: 75vw;
  }
}
@media (width <= 425px) {
  h2,
  .h2 {
    margin-bottom: 40px;
  }
  .header {
    background-color: var(--bg-light1);
    height: 8vh;
    /* box-shadow: 0 0 10px rgba(0, 0, 0, .19); */
  }
  .header.dark {
    background-color: var(--bg-night2);
    /* box-shadow: 0 0 10px rgba(0, 0, 0, .19); */
  }
  .container2,
  .container3,
  .container4 {
    padding: 60px 0;
  }
  .container-services {
    gap: 1rem;
  }
  .services-title {
    word-break: break-word;
  }
  .block-wrapper-4 {
    width: 98%;
    /* margin-bottom: 2rem; */
    padding: 40px 12px;
  }
  .form-div-1 {
    flex-direction: column;
  }
  .container5-responsive {
    flex-direction: column;
    align-items: flex-start !important;
    gap: 2rem;
  }
  .footer-nav-div-wrapper {
    order: -1;
    min-width: 328px;
  }
  .footer-nav-div {
    width: fit-content;
  }
  .de-footer-1 {
    width: 60px;
    height: 60px;
    top: 56%;
    left: 78%;
  }
  .de-footer-2 {
    width: 40px;
    height: 40px;
    top: 86%;
    left: 5%;
  }
}
/* ... */

